------------------
- Started working on CENTER flow
- Started writing a dialog for paragraph settings

Reggie, 18.9.1998:
------------------
- Worked on paragraph settings dialog (started a cool preview widget)
- Fixed a redraw problem (with setting some clippings)

Reggie, 19.9.1998:
------------------
- Worked on paragraph settings dialog
- Some improvements with linebreaking
- Fixed bug in cursor navigation
- Fixed bug in "Blocksatz"

Reggie, 20.9.1998:
------------------
- Implemented configurable left indent and first line left indent
- Fixed some bugs in cursor navigation
- Fixed a bug in Key_Backspace
- Automatically recalc/update of the cursor, if a new page/paragraph layout is set 

Reggie, 21.9.1998:
------------------
- Using new interactive KoRuler (which I started writing today) instead of KRuler.
- First trial of linespacing... 

Reggie, 22.9.1998:
------------------
- Fixed a bug in Key_Enter
- Implemented more ruler stuff (this works great now :-)
- Cleaned some GUI stuff

Reggie, 23.9.1998:
------------------
- Indents are configuarble with the ruler now
- Fixed a bug with indents and makeing the line format (line-breaking)
- Another fix with indents and redrawing

Reggie, 24.9.1998:
------------------
- Started implementing: Insert, display and format pictures as character.
  It already works somehow...

Reggie, 25.9.1998:
------------------
- More work on pictures as characters

Reggie, 26.9.1998:
------------------
- Fixed some problems with deleting Text (Key_Delete/Key_Backspace) and
  linebreaking
- Improved KFormatContext::makeLineLayout() to make the linebreaking more
  precise and to make it work correctly with special characters (like pictures)

Reggie, 28.9.1998:
------------------
- Added JPEG filter
- some fixes

Reggie, 29.9.1998:
------------------
- Bugfix with drawing the cursor

Reggie, 30.9.1998:
------------------
- Started implementing placing the cursor with the mouse (but it doesn't do
  anything at the moment...)